# femm_tmpl

./: .gitignore  Makefile  pyproject.toml  requirements.txt
src/: main.py
src/femmlib/: air_gap.py  block.py  boundary.py  circuit.py  core.py  figure.py  problem.py  shape.py  state.py  structure.py  types.py  unit.py
src/helpers/: path.py
src/mathlib/: electromagnetics.py  vector2.py
src/plotting/: plotters.py
tests/: test_path_helpers.py  test_vector2.py
