[project]
name = "femmlib"
requires-python = ">=3.12"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.ruff]
src = ["src", "tests", "src/*"]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "C4", "TCH"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = 72

[tool.pytest.ini_options]
pythonpath = [".", "src"]
